fix unassign untuk mandor dan supir